fixed DebugAttachDetector on jdk 11